--- a/css/menu.css
+++ b/css/menu.css
@@ -83,3 +83,6 @@ ul > li:hover > a:before,
 ul > li.active > a:before {
   border-top-color: #ffffff;
 }
+
+/* =============================================== */
+
