--- a/css/practice.css
+++ b/css/practice.css
@@ -1,64 +1,106 @@
-.col-1-3{
-	display: flex;
-	justify-content: left;
-    background-color: rgb(83, 11, 252);
+
+
+.zerogrid{
     margin-left: 20%;
-    margin-right: 40%;
-    
 }
 
-.row {
-    max-width: 100%;
-    background-color: rgb(0, 255, 157);
+.main-header .row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 20%;
 }
 
-footer .wrap-footer {
-	padding: 60px;
-	background: rgba(0, 0, 0, 0.8);
+.wrap-footer .row {
+	padding-left: 60px;
     grid-template-columns: 33% 33% 33%;
     display: grid;
-    margin-left: 20%;
     margin-right: 20%;
+    background-color: black;
 }
 
 .wrap-box{
-    background-color: rgba(9, 28, 110, 0);
     max-width: 80%;
-    margin-left: 20%;
-    margin-right: 20%;
-    grid-template-columns: 50% 50%;
 }
 
 .content-box.box-3 {
 	text-align: center;
-	margin-left: 20%;
-	margin-right: 20%;
 	
 }
 
 .content-box.box-style-1 {
 	background: rgb(255, 255, 255) url(../images/model.png) no-repeat 100% 100%;
 	color: rgb(0, 0, 0);
-    margin-left: 20%;
     margin-right: 20%;
 }
 
-.box-text {
-	padding: 60px 40px ;
-	background-color: brown;
+.content-box.box-3 .col-1-2 {
+    display: flex;
+    justify-content:flex-start;
+    margin-right: 50%;
+    padding: 0%;
+}
+
+
+.content-box.box-3 .box-text {
+	padding: 40px 40px;
 }
 
 .col-1-3 .col-footer-1{
     grid-column-start: 1;
 }
 
-
-
-.col-footer-2{
-    background-color: brown;
+.wrap-footer .col-1-3.col-footer-2{
     grid-column-start: 2;
 }
 
-#container .wrap-container {
-	background: rgba(255, 255, 255, 0);
+
+.content-box.box-2 .row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-2-5.box-item{
+    width: 40%;
+}
+
+.col-3-5.box-item{
+    width: 60%;
+}
+.col-1-2.box-item{
+    width: 50%;
+}
+
+footer .bottom-footer {
+	text-align: center;
+	padding: 40px 0;
+	color: #fff;
+    margin-right: 20%;
+}
+
+.contact-form h3 {
+	font-size: 43px;
+	font-weight: 400;
+	color: rgb(255, 255, 255);
+}
+
+.box-text{
+    text-align: right;
+    padding-right: 5%;
+}
+
+.box-text.text-right{
+    text-align: left;
+    padding-left: 5%;
+}
+
+
+.wrap-container .flex-box{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.flex-box .col-1-2{
+    width: 100%;
 }
