--- a/css/style.css
+++ b/css/style.css
@@ -475,9 +475,7 @@ body .wrap-body {
 /*                             --------------------------------------*/
 
 
-.content-box.box-3 .box-text {
-	padding: 60px 40px;
-}
+
 
 .content-box.box-3 h1 {
 	font-size: 42px;
@@ -528,8 +526,8 @@ article.single-post .wrap-post,
 article {
 	background: #ffffff;
 	color: #3F3F3F;
-	margin: 0;
-	/*padding: 0 30px 50px;*/
+	margin-right: 20%;
+	
 }
 
 article.single-post .entry-header {
@@ -697,11 +695,7 @@ footer .bottom-social i.fa {
 }
 
 
-footer .bottom-footer {
-	text-align: center;
-	padding: 40px 0;
-	color: #fff;
-}
+
 
 footer .bottom-footer a {
 	text-decoration: underline
@@ -724,11 +718,7 @@ footer .bottom-footer a {
 	margin-top: 0;
 }
 
-.contact-form h3 {
-	font-size: 43px;
-	font-weight: 400;
-	color: #222;
-}
+
 
 /* ---------------------------------------------------------------------------- */
 /* -------------------------------------Button--------------------------------- */
